examples/test/testpolicy17829.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17829
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key34: value37
      key37: value24
      key10: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value42
      podSelector:
        matchLabels:
          key45: value16
          key47: value38
          key34: value13
